api: rest: Fix update APIs
