# pkg/api/rest/model/workflow.go
@@ -89,12 +89,6 @@ type CreateWorkflowReq struct {
 	Data CreateDataReq `gorm:"column:data" json:"data" mapstructure:"data" validate:"required"`
 }
 
-type UpdateWorkflowReq struct {
-	ID   string        `gorm:"primaryKey" json:"id" mapstructure:"id" validate:"required"`
-	Name string        `gorm:"column:name" json:"name" mapstructure:"name" validate:"required"`
-	Data CreateDataReq `gorm:"column:data" json:"data" mapstructure:"data" validate:"required"`
-}
-
 func (d Data) Value() (driver.Value, error) {
 	return json.Marshal(d)
 }
